tests/programs/valid/VoidReturnTypeExample.java
public class VoidReturnTypeExample {
    public void methodWithVoidReturnType() {
        System.out.println("This method returns void.");
    }
}
