tests/programs/invalid/super_method_call.java
public class super_method_call {
  public String m() {
    return super.toString();
  }
  public String toString() {
    return "A";
  }
}